--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 django
 google-api-python-client
-#google-auth-httplib2
-#google-auth-oauthlib
 oauth2client
+httplib2
 jsonpickle
 beautifulsoup4
 lxml
